--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <div id="header-content">
             <h2>Larsern.no</h2>
+            Test
         </div>
     </header>
 </body>
