possible to open game now

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6486465162949807"
-     crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -17,14 +15,17 @@
         <div id="header-content">
             <h2>Larsern.no</h2>
             <ul>
-                <li>Botón</li>
+                <!-- <li>Botón</li> -->
             </ul>
         </div>
     </header>
     <main>
-        <div id="big-box">Big box</div>
-        <div class="small-box" id="small1">Small box</div>
-        <div class="small-box" id="small2">Small box</div>
+        <a id="big-box" href="https://supermarius.larsern.no">
+            <h5>Super Marius??</h5>
+            <img src="images/supermarius.png" alt="Image of game">
+        </a>
+        <a class="small-box" id="small1">Plutselig</a>
+        <a class="small-box" id="small2">Skumle greier</a>
     </main>
 </body>
 </html>
