la til trippy greier

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <main>
         <a id="big-box" href="https://supermarius.larsern.no">
             <h5>Super Marius??</h5>
-            <img src="images/supermarius.png" alt="Image of game">
+            <!-- <img src="images/supermarius.png" alt="Image of game"> -->
         </a>
         <a class="small-box" id="small1">Plutselig</a>
-        <a class="small-box" id="small2">Skumle greier</a>
+        <a class="small-box" id="small2" href="https://trippy.larsern.no">Trippy greier</a>
     </main>
 </body>
 </html>
